--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Ibrahim Pairing",
+    "name": "GEEK Pairing",
     "description": "FLASH-MD WA bot, Created by France King",
     "logo": "https://telegra.ph/file/5cd90362ad7c6cbb60069.jpg",
     "repository": "https://github.com/ibrahimaitech/Flash-Md-Session11/tree/main",
